# openGL_template

./: .gitignore  CMakeLists.txt  README.md
application/src/: main.cpp
src/: main.cpp
